<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/transparent"
            android:inputType="text"
            android:text="@string/title_example"
            android:textSize="@dimen/header_title_text_size"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/date_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date_example" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15">

        <EditText
            android:id="@+id/text_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/transparent"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:text="@string/text_example"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>